tests/baselines/reference/for-of52.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of52.ts(1,11): error TS2451: Cannot redeclare block-scoped variable 'v'.
tests/cases/conformance/es6/for-ofStatements/for-of52.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'v'.


==== tests/cases/conformance/es6/for-ofStatements/for-of52.ts (2 errors) ====
    for (let [v, v] of [[]]) {}
              ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                 ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.